# hello-vcpkg

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
hello-vcpkg/: CMakeLists.txt  hello-vcpkg.cpp  hello-vcpkg.h
